the project is ready for use